--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,20 +12,23 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.6",
-    "@mui/material": "^6.1.6",
+    "@mui/icons-material": "^6.1.9",
+    "@mui/material": "^6.1.9",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
+    "crypto": "^1.0.1",
     "gapi-script": "^1.2.0",
     "googleapis": "^144.0.0",
     "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
