--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "@react-oauth/google": "^0.12.1",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "crypto": "^1.0.1",
     "gapi-script": "^1.2.0",
     "googleapis": "^144.0.0",
     "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^9.0.0",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
@@ -36,7 +38,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
