--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,14 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.0.0",
+    "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "zod": "^3.23.8"
   },
