--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.0.0",
+    "@types/axios": "^0.9.36",
     "@types/multer": "^1.4.12",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
