--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
-    "react-router-dom": "^6.27.0"
+    "react-icons": "^5.4.0",
+    "react-pro-sidebar": "^1.1.0",
+    "react-router-dom": "^6.27.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
