--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,8 @@
     "react-icons": "^5.4.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^11.0.2",
+    "recoil": "^0.7.7",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
