--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-pushnotifications": "^3.1.1",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16",
     "socket.io": "^4.8.1",
     "zod": "^3.23.8"
@@ -31,7 +33,9 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.1",
+    "@types/node-schedule": "^2.1.7",
     "@types/nodemailer": "^6.4.17",
+    "@types/web-push": "^3.6.4",
     "prisma": "^6.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
