--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "node-pushnotifications": "^3.1.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16",
+    "redis": "^4.7.0",
     "socket.io": "^4.8.1",
     "zod": "^3.23.8"
   },
