--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.0.0",
+    "@redis/client": "^1.6.0",
     "@types/axios": "^0.9.36",
     "@types/multer": "^1.4.12",
     "axios": "^1.7.9",
