--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -25,8 +26,10 @@
     "node-pushnotifications": "^3.1.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16",
+    "openai": "^4.98.0",
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
+    "twilio": "^5.6.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
