--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.810.0",
+    "@aws-sdk/s3-request-presigner": "^3.810.0",
     "@prisma/client": "^6.0.0",
     "@redis/client": "^1.6.0",
     "@types/axios": "^0.9.36",
     "@types/multer": "^1.4.12",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.1",
     "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
@@ -30,6 +34,7 @@
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
     "twilio": "^5.6.1",
+    "uuid": "^11.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
