--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,16 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
+    "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-toast": "^1.2.13",
+    "@radix-ui/react-tooltip": "^1.2.6",
     "@react-oauth/google": "^0.12.1",
     "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.20",
@@ -27,23 +31,25 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
+    "date-fns": "^4.1.0",
     "gapi-script": "^1.2.0",
     "googleapis": "^144.0.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.507.0",
     "mdb-react-ui-kit": "^9.0.0",
+    "next-themes": "^0.4.6",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
-    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^11.0.2",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^3.2.0",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
