--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "start" : "node dist/index.js",
+    "build" : "tsc -b"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
     "@types/axios": "^0.9.36",
     "@types/multer": "^1.4.12",
     "@types/uuid": "^10.0.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
