--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.12.1",
     "gapi-script": "^1.2.0",
     "googleapis": "^144.0.0",
     "jwt-decode": "^4.0.0",
